# mcp-scholarly

./: Dockerfile  LICENSE  README.md  pyproject.toml  smithery.yaml
src/mcp_scholarly/: arxiv_search.py  google_scholar.py  server.py
