[project]
name = "mcp-scholarly"
version = "0.1.0"
description = "A MCP server to search for accurate academic articles."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "arxiv>=2.1.3",
 "free-proxy>=1.1.3",
 "mcp>=1.1.2",
 "scholarly>=1.7.11",
]
[[project.authors]]
name = "Aditya Karnam"
email = "akarnam37@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-scholarly = "mcp_scholarly:main"
